Kubernetes/services/files/traefik/middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
spec:
  stripPrefix:
    prefixes:
      - /mysqladmin
      - /app
      - /dashy
