Kubernetes/services/files/traefik/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: the-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-stripprefix@kubernetescrd

spec:
  rules:
    - http:
        paths:
          - path: /mysqladmin
            pathType: Prefix
            backend:
              service:
                name: mysql-admin-phpmyadmin
                port:
                  number: 80
          - path: /dashy
            pathType: Prefix
            backend:
              service:
                name: dashy
                port:
                  number: 4000
